# linux-kernel-module-rust

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTES.md  README.md  build.rs  x86_64-linux-kernel-module.json
example-sysctl/: Cargo.toml  Makefile
example-sysctl/src/: lib.rs
hello-world/: Cargo.toml  Kbuild  Makefile
hello-world/src/: lib.rs
kernel-cflags-finder/: .gitignore  Kbuild  Makefile  README.md  dummy.c
src/: allocator.rs  bindings.rs  bindings_helper.h  c_types.rs  chrdev.rs  error.rs  file_operations.rs  filesystem.rs  helpers.c  lib.rs  printk.rs  printk_helper.c  random.rs  rcu.rs  sched.rs  sysctl.rs  types.rs  user_ptr.rs
static-filesystem/: Cargo.toml  Makefile
static-filesystem/src/: lib.rs
testlib/: Cargo.toml
testlib/src/: lib.rs
tests/: Kbuild  Makefile  run_tests.py  run_tests.sh  testlib.rs
tests/chrdev/: Cargo.toml  tests.rs
tests/chrdev-region-allocation/: Cargo.toml  tests.rs
tests/chrdev-region-allocation/src/: lib.rs
tests/chrdev-region-allocation/tests/: tests.rs
tests/chrdev/src/: lib.rs
tests/chrdev/tests/: tests.rs
tests/filesystem/: Cargo.toml
tests/filesystem/src/: lib.rs
tests/filesystem/tests/: tests.rs
tests/for-each-process/: Cargo.toml
tests/for-each-process/src/: lib.rs
tests/for-each-process/tests/: tests.rs
tests/json-sysctl/: Cargo.toml
tests/json-sysctl/src/: lib.rs
tests/json-sysctl/tests/: tests.rs
tests/modinfo/: Cargo.toml
tests/modinfo/src/: lib.rs
tests/modinfo/tests/: tests.rs
tests/printk/: Cargo.toml  tests.rs
tests/printk/src/: lib.rs
tests/printk/tests/: tests.rs
tests/random/: Cargo.toml
tests/random/src/: lib.rs
tests/random/tests/: tests.rs
tests/sysctl/: Cargo.toml  tests.rs
tests/sysctl-get/: Cargo.toml
tests/sysctl-get/src/: lib.rs
tests/sysctl-get/tests/: tests.rs
tests/sysctl/src/: lib.rs
tests/sysctl/tests/: tests.rs
tests/utils/: Cargo.toml
tests/utils/src/: lib.rs
tests/utils/tests/: tests.rs
