[package]
name = "linux-kernel-module"
version = "0.1.0"
authors = ["Alex Gaynor <alex.gaynor@gmail.com>"]

[dependencies]
bitflags = "1"
byte-strings = { git = "https://github.com/geofft/byte-strings-rs", branch = "no-std", default-features = false }

[build-dependencies]
bindgen = "*"
cc = "1.0"
shlex = "0.1"
