[package]
name = "hello-world"
version = "0.1.0"
authors = ["Geoffrey Thomas <geofft@ldpreload.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
linux-kernel-module = { path = ".." }
byte-strings = { git = "https://github.com/geofft/byte-strings-rs", branch = "no-std", default-features = false }
