[package]
name = "json-sysctl-tests"
version = "0.1.0"
authors = ["Alex Gaynor <alex.gaynor@gmail.com", "Geoffrey Thomas <geofft@ldpreload.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]
test = false

[features]
default = ["linux-kernel-module"]

[dependencies]
linux-kernel-module = { path = "../..", optional = true }
serde = { version = "1", default-features = false , features = ["derive"] }
serde-json-core = "0.1"
typenum = "1"

[dev-dependencies]
kernel-module-testlib = { path = "../../testlib" }
